[gd_scene load_steps=3 format=3 uid="uid://csn36y2i2ckf4"]

[ext_resource type="Script" path="res://scenes/battle/card_slot.gd" id="1_03rsq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3a6wt"]
size = Vector2(64, 128)

[node name="CardSlot" type="Node2D"]
script = ExtResource("1_03rsq")

[node name="Container" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_3a6wt")

[node name="ClickCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
